# wallet-analytics-mcp

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  TEST_PLAN.md  pyproject.toml
src/wallet_analytics_mcp/: __init__.py  __main__.py  config.py  provider.py  server.py  swap.py  swap_parser.py
tests/: conftest.py  test_config.py  test_provider.py  test_server.py  test_swap.py  test_swap_parser.py
