[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wallet-analytics-mcp"
version = "0.1.0"
description = "MCP server for analyzing on-chain wallet swap transactions"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "mcp>=1.28.0",
    "solana>=0.36.0",
    "solders>=0.25.0",
]

[project.scripts]
wallet-analytics-mcp = "wallet_analytics_mcp:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a real RPC endpoint (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
